<resources>
    <string name="app_name">Заметки</string>
    <string name="btn_add_note">Добавить</string>
    <string name="add_note_name_hint">Название</string>
    <string name="add_note_text_hint">Текст</string>
    <string name="start_label">Что использовать?</string>
    <string name="start_btn_room">Room</string>
    <string name="start_firebase">Firebase</string>
    <string name="tittle">Заметки</string>
    <string name="toast_enter_name">Введите имя заметки</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="btn_login">Войти</string>
    <string name="toast_wrong_login">Введите пароль и почту</string>
</resources>